Fri May 11 08:06:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_vxworks6.3.GNU:
          Small improvements

Fri May 11 07:57:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_hpux_aCC.GNU:
          Improved aCC version detection check

Thu May 10 16:17:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_hpux_aCC.GNU:
          Disable W3390 with HP aCC 06.13

        * include/makeinclude/platform_rtems.x_g++.GNU:
          When HOST_ROOT is set then set the dependent variables

Thu May 10 15:20:52 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/ace_wchar.h: Add #include "ace/config-macros.h" so the proper
          setting of ACE_LACKS_PRAGMA_ONCE is known before it's needed.

Thu May 10 15:17:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Reactor/Dgram/CODgram.cpp:
        * examples/Reactor/Dgram/Dgram.cpp:
          Fixed compile errors with WinCE

Wed May  9 18:59:26 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs/ace_guidelines.vsmacros:

          Improved the macros such that it will convert tabs to 2 spaces
          for all files excepts those on the exception list. Currently,
          only MPC template files are on this list.

Wed May  9 18:50:29 UTC 2007  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs/ace_guidelines.vsmacros:

          By default, the ace_guideline macros does not convert tabs to
          spaces. Instead, this has to be set under Tools | Options...

Tue May  8 20:50:34 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/Malloc_T.cpp (ACE_Dynamic_Cached_Allocator):
          Reverted this change:
          Tue May  8 07:51:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
          It broke Hash_Map_Manager_Test which checks for a failed allocation
          when using a too-small pool.
