@@ -1,3 +1,8 @@
+Fri May 11 08:22:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/config-vxworks6.2.h:
+          Improved VxWorks 6.2 kernel support
+
 Fri May 11 08:06:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * include/makeinclude/platform_vxworks6.3.GNU:
